# pong-ecs

./: CMakeLists.txt  README.md
src/: Ball.cpp  Ball.h  CMakeLists.txt  Common.h  Display.cpp  Display.h  Engine.cpp  Engine.h  Entity.h  IComponent.h  ISystem.h  main.cpp
src/Components/: BallComponent.h  BounceComponent.h  BoundingBoxComponent.h  CMakeLists.txt  CollidableComponent.h  ComponentFactory.cpp  ComponentFactory.h  DisplayTextComponent.h  DrawableComponent.h  FontComponent.h  MovableComponent.h  PaddleComponent.h  PositionComponent.h  PositionSinkComponent.h  RenderSFML.h  RenderWindowComponent.h  RenderableComponent.h  ShapeComponent.h  SpeedComponent.h  TextComponent.h  TextSinkComponent.h  TextSourceComponent.h  WallComponent.h
src/Events/: CMakeLists.txt  Collision.h  Event.h  EventManager.cpp  EventManager.h  Input.h  Move.h
src/SimpleECS/: CMakeLists.txt  Entity.h  IComponent.h  ISystem.h  Manager.cpp  Manager.h  Types.h
src/Systems/: CMakeLists.txt  EventCollisionSystem.cpp  EventCollisionSystem.h  InputHandlerSystem.cpp  InputHandlerSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSFML.cpp  RenderSFML.h  RenderSystem.cpp  RenderSystem.h  SimpleCollisionSystem.cpp  SimpleCollisionSystem.h  TextSinkRender.cpp  TextSinkRender.h  TextSinkRenderSystem.cpp  TextSinkRenderSystem.h
src/ecs/: ComponentTypes.h  Entity.h  IComponent.h  ISystem.h  Manager.cpp  Manager.h  Types.h
